# THGTM

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
experiments/: depth_n_parity.py  noisy_xor.py  temporal_xor.py  trajectory_verification.py
paper/: references.bib  thgtm.tex
results/: depth_n_parity.json  noisy_xor.json  temporal_xor.json  trajectory_verification.json
scripts/: make_figures.py
tests/: test_etta.py  test_hgtm.py  test_receipts.py  test_temporal.py  test_tm.py
thgtm/: __init__.py  etta.py  hgtm.py  receipts.py  temporal.py  tm.py
