[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thgtm"
version = "0.1.0"
description = "Temporal Hierarchical Graph Tsetlin Machine with Echo-Trace Tsetlin Automata"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Anwar Debes", email = "anwar@uia.no"}
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[tool.setuptools.packages.find]
include = ["thgtm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
